<resources>
    <string name="app_name">Dino Pedia</string>
    <string name="share">Bagikan</string>
    <string name="send_to">Bagikan ke</string>
    <string name="info_family_logo">Logo Family</string>
    <string name="info_family_name">Nama Family</string>
    <string name="info_family_desc">Deskripsi</string>
    <string name="info_family_periode">Periode Hidup</string>
    <string name="info_family_habitat">Habitat dan Lingkungannya</string>
    <string name="info_family_perilaku">Perilaku</string>
    <string name="info_family_klasifikasi">Jenis Dinosaurus</string>
    <string name="info_dino_name">Nama Dino</string>
    <string name="info_dino_icon">Icon Dino</string>
    <string name="info_dino_desc">Deskripsi Dino</string>
    <string name="info_dino_habitat">Habitat Dino</string>
    <string name="info_dino_karakter">Karakter Dino</string>
    <string name="info_dino_perilaku">Perilaku Dino</string>
    <string name="info_dino_adaptasi">Adaptasi Dino</string>
    <string name="info_dino_periode">Periode Dino</string>
    <string-array name="familys_name">
        <item>Tyrannosauridae</item>
        <item>Hadrosauridae</item>
        <item>Ceratopsidae</item>
        <item>Sauropodidae</item>
        <item>Stegosauridae</item>
        <item>Ankylosauridae</item>
        <item>Therizinosauridae</item>
        <item>Ornithomimidae</item>
    </string-array>
    <string-array name="familys_logo">
        <item>@drawable/fam1</item>
        <item>@drawable/fam2</item>
        <item>@drawable/fam3</item>
        <item>@drawable/fam4</item>
        <item>@drawable/fam5</item>
        <item>@drawable/fam6</item>
        <item>@drawable/fam7</item>
        <item>@drawable/fam8</item>
    </string-array>
    <string-array name="familys_description">
        <item>
            1. Dikenal sebagai famili dinosaurus karnivora besar yang paling terkenal. \n
            2. Ciri khasnya adalah kepala besar, rahang kuat, dan gigi tajam yang cocok untuk memotong daging. \n
            3. Anggota terkenalnya adalah Tyrannosaurus rex, dinosaurus karnivora raksasa yang memerintah sebagai predator puncak di zamannya.</item>
        <item>
            1. Juga dikenal sebagai "dinosaurus bebek" karena memiliki rahang yang mirip dengan bebek modern. \n
            2. Umumnya adalah dinosaurus herbivora dengan mulut yang mampu mengunyah dan mengolah tumbuhan.
            3. Anggota terkenal termasuk Parasaurolophus, Edmontosaurus, dan Corythosaurus.
        </item>
        <item>
            1. Famili dinosaurus bertanduk yang memiliki ciri khas tanduk besar di kepala dan kerah tulang yang menonjol. \n
            2. Dikenal karena memiliki perisai tulang di wajah mereka. \n
            3. Contoh yang paling terkenal adalah Triceratops, yang memiliki tiga tanduk besar di bagian atas kepala.
        </item>
        <item>
            1. Salah satu famili dinosaurus terbesar yang pernah ada, dikenal karena tubuh raksasa dan leher panjang mereka. \n
            2. Umumnya adalah dinosaurus herbivora yang mencari makan dari tumbuhan tinggi. \n
            3. Contoh yang terkenal termasuk Brachiosaurus dan Diplodocus.
        </item>
        <item>
            1. Famili dinosaurus dengan ciri khas tonjolan tulang dan duri besar di punggung dan ekor mereka. \n
            2. Dipercaya bahwa tonjolan tulang ini mungkin digunakan untuk tujuan pertahanan atau regulasi suhu. \n
            3. Stegosaurus adalah salah satu contoh yang paling terkenal dari famili ini.
        </item>
        <item>
            1. Famili dinosaurus yang memiliki tubuh yang dilindungi oleh pelat-pelat tulang dan tonjolan-tonjolan. \n
            2. Ciri khasnya adalah ekor yang berat dilengkapi dengan bola tulang yang berfungsi sebagai senjata pertahanan. \n
            3. Ankylosaurus dan Euoplocephalus adalah contoh yang paling terkenal.
        </item>
        <item>
            1. Famili dinosaurus yang umumnya memiliki cakar yang panjang dan melengkung, serta gigi yang cocok untuk pemakan tumbuhan. \n
            2. Dipercaya bahwa mereka adalah herbivora atau omnivora. \n
            3. Therizinosaurus adalah contoh yang paling terkenal dari famili ini.
        </item>
        <item>
            1. Famili dinosaurus yang sering disebut sebagai "dinosaurus mirip burung" karena tubuh ramping dan cakar yang mirip dengan burung. \n
            2. Meskipun sering dianggap sebagai pemakan daging, ada juga bukti yang menunjukkan bahwa mereka mungkin omnivora atau bahkan herbivora. \n
            3. Ornithomimus adalah salah satu contoh yang paling terkenal.
        </item>
    </string-array>
    <string-array name="familys_periode">
        <item>Muncul pada pertengahan hingga akhir periode Kapur, sekitar 85 hingga 66 juta tahun yang lalu.</item>
        <item>Terutama hidup pada akhir periode Kapur, sekitar 80 hingga 66 juta tahun yang lalu.</item>
        <item>Muncul pada pertengahan hingga akhir periode Kapur, sekitar 83 hingga 66 juta tahun yang lalu.</item>
        <item>Mayoritas hidup selama periode Jura dan Kapur, dengan sebagian besar spesies hidup pada periode Kapur, sekitar 150 hingga 66 juta tahun yang lalu.</item>
        <item>Terutama hidup pada akhir periode Jura hingga awal periode Kapur, sekitar 155 hingga 150 juta tahun yang lalu.</item>
        <item>Terutama hidup pada pertengahan hingga akhir periode Kapur, sekitar 125 hingga 66 juta tahun yang lalu.</item>
        <item>Terutama hidup pada akhir periode Kapur, sekitar 90 hingga 66 juta tahun yang lalu.</item>
        <item>Terutama hidup pada pertengahan hingga akhir periode Kapur, sekitar 126 hingga 66 juta tahun yang lalu.</item>
    </string-array>
    <string-array name="familys_habitat">
        <item>Biasanya ditemukan di wilayah daratan yang luas, termasuk hutan datar, daerah sungai, dan dataran banjir. Mereka adalah predator yang dominan dan membutuhkan ruang yang cukup untuk mencari mangsa.</item>
        <item>Biasanya ditemukan di daerah berawa, dataran banjir, dan hutan rawa-rawa. Mereka sering kali berada di daerah-daerah dengan vegetasi yang lebat, karena mereka adalah herbivora yang memakan tumbuhan rendah dan semak-semak.</item>
        <item>Biasanya ditemukan di dataran terbuka dan savana, serta hutan terbuka. Mereka sering kali hidup di daerah yang cukup subur dengan vegetasi yang beragam, karena mereka adalah herbivora yang memakan berbagai jenis tumbuhan.</item>
        <item>Sering ditemukan di dataran banjir, hutan datar, dan daerah-daerah dengan vegetasi yang lebat. Mereka adalah herbivora raksasa yang membutuhkan banyak tanaman untuk memenuhi kebutuhan makanan mereka.</item>
        <item>Biasanya ditemukan di daerah yang lebih kering, seperti daerah padang rumput dan daerah bersemak belukar. Mereka cenderung menghindari hutan lebat karena ukuran dan bentuk tubuh mereka yang khas.</item>
        <item>Biasanya ditemukan di daerah dataran rendah dan hutan rawa-rawa. Mereka mungkin lebih memilih daerah yang lebih tertutup dan dilindungi karena perlindungan yang diberikan oleh baju besi tulang mereka.</item>
        <item>Biasanya ditemukan di hutan-hutan lebat dan daerah-daerah dengan vegetasi yang subur. Mereka adalah herbivora yang memiliki cakar besar dan digunakan untuk mencabut tumbuhan dari pepohonan dan semak-semak.</item>
        <item>Biasanya ditemukan di daerah-daerah terbuka, savana, dan hutan terbuka. Mereka adalah dinosaurus berlari yang cepat dan mungkin mendiami habitat yang memungkinkan mereka untuk bergerak dengan cepat dalam mencari makanan.</item>
    </string-array>
    <string-array name="familys_perilaku">
        <item>Tyrannosauridae, termasuk Tyrannosaurus rex, dikenal sebagai predator raksasa. Mereka memiliki perilaku pemangsa yang agresif dan mematikan. Tyrannosaurus rex diyakini berburu secara soliter atau mungkin dalam pasangan kecil. Mereka mungkin menggunakan strategi pengejaran dan kejutan untuk menaklukkan mangsa mereka.</item>
        <item>Hadrosauridae, atau dinosaurus bebek, adalah herbivora yang hidup dalam kelompok besar. Mereka sering kali membentuk kawanan untuk meningkatkan perlindungan dari predator dan memperoleh keuntungan makanan dari pohon-pohon atau semak-semak yang mereka makan.</item>
        <item>Ceratopsidae, seperti Triceratops, adalah herbivora dengan ciri khas tanduk dan kerongkongan. Mereka mungkin memiliki perilaku bertarung dalam konteks persaingan antarsesama jenis, dengan menggunakan tanduk mereka sebagai senjata dalam pertarungan.</item>
        <item>Sauropodidae, termasuk Brachiosaurus dan Diplodocus, adalah herbivora raksasa dengan leher panjang dan ekor yang panjang. Mereka cenderung memiliki perilaku makan yang konstan, menghabiskan sebagian besar waktu mereka mencari makanan dan mengunyah tumbuhan yang rendah.</item>
        <item>Stegosauridae, seperti Stegosaurus, memiliki ciri khas punggung yang dilengkapi dengan lempeng dan tanduk. Mereka mungkin memiliki perilaku defensif yang kuat, menggunakan lempeng dan tanduk mereka sebagai pertahanan terhadap predator.</item>
        <item>Ankylosauridae, seperti Ankylosaurus, memiliki tubuh yang dilindungi dengan baju besi tulang dan tulang ekor yang berduri. Mereka mungkin memiliki perilaku yang lamban dan cenderung bertahan dalam situasi berbahaya, mengandalkan perlindungan fisik mereka untuk menghindari serangan predator.</item>
        <item>Therizinosauridae, seperti Therizinosaurus, adalah herbivora yang memiliki cakar besar dan digunakan untuk mencabut tumbuhan dari pepohonan dan semak-semak. Mereka mungkin memiliki perilaku sosial yang kompleks dan mungkin juga bertindak sebagai predator untuk mencari makanan lain seperti invertebrata.</item>
        <item>Ornithomimidae, atau dinosaurus mirip burung, adalah dinosaurus berlari yang cepat. Mereka mungkin memiliki perilaku pengejar-pengejar kecil dan bisa bergerak dengan cepat dalam mencari makanan atau melarikan diri dari predator.</item>
    </string-array>
    <string-array name="familys_klasifikasi">
        <item>Tyrannosaurus rex</item>
        <item>Parasaurolophus, Edmontosaurus</item>
        <item>Triceratops, Styracosaurus</item>
        <item>Brachiosaurus, Diplodocus</item>
        <item>Stegosaurus</item>
        <item>Ankylosaurus, Euoplocephalus</item>
        <item>Dinosaurus: Therizinosaurus</item>
        <item>Dinosaurus: Ornithomimus</item>
    </string-array>
    <string-array name="start_index_dino">
        <item>0</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
    </string-array>
    <string-array name="end_index_dino">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
        <item>9</item>
        <item>11</item>
        <item>13</item>
        <item>15</item>
    </string-array>
    <string-array name="dinos_name">
        <item>Tyrannosaurus rex</item>
        <item>Albertosaurus Sarcophagus</item>
        <item>Edmontosaurus Regalis</item>
        <item>Maiasaura Peeblesorum</item>
        <item>Triceratops Horridus</item>
        <item>Styracosaurus Albertensis</item>
        <item>Brachiosaurus Altithorax</item>
        <item>Apatosaurus Louisae</item>
        <item>Stegosaurus Stenops</item>
        <item>Kentrosaurus Aethiopicus</item>
        <item>Ankylosaurus Magniventris</item>
        <item>Euoplocephalus Tutus</item>
        <item>Therizinosaurus Cheloniformis</item>
        <item>Beipiaosaurus Inexpectus</item>
        <item>Ornithomimus Velox</item>
        <item>Gallimimus Bullatus</item>
    </string-array>
</resources>