<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            tools:context=".DetailDinosaurusActivity">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="50dp">
                <ImageView
                    android:id="@+id/ivDetailIcon"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/info_dino_icon"
                    android:src="@drawable/edmontosaurus"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />
                <TextView
                    android:id="@+id/tvDetailDino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_dino_name"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:justificationMode="inter_word"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/ivDetailIcon" />
                <TextView
                    android:id="@+id/tvDetailDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/info_dino_desc"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:justificationMode="inter_word"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/tvDetailDino" />
                <TextView
                    android:id="@+id/tvHabitat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/info_family_klasifikasi"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:justificationMode="inter_word"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/tvDetailDescription" />
                <TextView
                    android:id="@+id/tvDetailHabitat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/info_dino_habitat"
                    android:textSize="16sp"
                    android:justificationMode="inter_word"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/tvHabitat" />

                <TextView
                    android:id="@+id/tvKarakter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/info_dino_karakter"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:justificationMode="inter_word"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/tvDetailHabitat" />
                <TextView
                    android:id="@+id/tvDetailKarakter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/info_dino_karakter"
                    android:textSize="16sp"
                    android:justificationMode="inter_word"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/tvKarakter" />

                <TextView
                    android:id="@+id/tvPerilaku"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/info_dino_perilaku"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:justificationMode="inter_word"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/tvDetailKarakter" />
                <TextView
                    android:id="@+id/tvDetailPerilaku"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/info_dino_perilaku"
                    android:textSize="16sp"
                    android:justificationMode="inter_word"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/tvPerilaku" />

                <TextView
                    android:id="@+id/tvAdaptasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/info_dino_adaptasi"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:justificationMode="inter_word"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/tvDetailPerilaku" />
                <TextView
                    android:id="@+id/tvDetailAdaptasi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/info_dino_adaptasi"
                    android:textSize="16sp"
                    android:justificationMode="inter_word"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/tvAdaptasi" />

                <TextView
                    android:id="@+id/tvPeriode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/info_dino_adaptasi"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:justificationMode="inter_word"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/tvDetailAdaptasi" />
                <TextView
                    android:id="@+id/tvDetailPeriode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/info_dino_adaptasi"
                    android:textSize="16sp"
                    android:justificationMode="inter_word"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/tvPeriode" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </ScrollView>

    <Button
        android:id="@+id/buttonDetailFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/bluee"
        android:text="Lihat Family" />


</RelativeLayout>