<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fabShare"
        android:layout_alignParentTop="true">

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            tools:context=".DetailActivity">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="50dp">
                <ImageView
                    android:id="@+id/ivDetailLogo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/info_family_logo"
                    android:src="@drawable/fam1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />
                <TextView
                    android:id="@+id/tvDetailFamily"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_family_name"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:justificationMode="inter_word"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/ivDetailLogo" />
                <TextView
                    android:id="@+id/tvDetailDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/info_family_name"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:justificationMode="inter_word"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/tvDetailFamily" />
                <TextView
                    android:id="@+id/tvDinosaurus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/info_family_dinosaurus"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:justificationMode="inter_word"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/tvDetailDescription" />
                <TextView
                    android:id="@+id/tvDetailDinosaurus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/info_family_dinosaurus"
                    android:textSize="16sp"
                    android:justificationMode="inter_word"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf=
                        "@+id/tvDinosaurus" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_share"
        app:layout_anchorGravity="bottom|end"
        app:backgroundTint="@color/blue" />

</RelativeLayout>